src/core-crm/objects/hed__Program_Plan__c/fields/Accreditation_End__c.field-meta.xml
<CustomField>
    <fullName>Accreditation_End__c</fullName>
    <label>Accreditation End</label>
    <type>Date</type>
</CustomField>