src/core-crm/objects/hed__Program_Plan__c/fields/Accreditation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Accreditation_End_Date__c</fullName>
    <label>Accreditation End Date</label>
    <type>Date</type>
</CustomField>