src/core-crm/objects/hed__Program_Plan__c/fields/Accreditation_Start__c.field-meta.xml
<CustomField>
    <fullName>Accreditation_Start__c</fullName>
    <label>Accreditation Start</label>
    <type>Date</type>
</CustomField>