src/core-crm/objects/hed__Program_Plan__c/fields/Accreditation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Accreditation_Start_Date__c</fullName>
    <label>Accreditation Start Date</label>
    <type>Date</type>
</CustomField>