src/core-crm/objects/hed__Program_Plan__c/fields/Associated_Standard_Award__c.field-meta.xml
<CustomField>
    <fullName>Associated_Standard_Award__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Standard Award</label>
    <referenceTo>hed__Program_Plan__c</referenceTo>
    <relationshipLabel>Program Plans</relationshipLabel>
    <relationshipName>Program_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>