src/core-crm/objects/hed__Program_Plan__c/fields/Availability_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Availability_End_Date__c</fullName>
    <description>The end date of the program availability / offering</description>
    <label>Availability End Date</label>
    <type>Date</type>
</CustomField>