src/core-crm/objects/hed__Program_Plan__c/fields/Availability_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Availability_Start_Date__c</fullName>
    <description>The start date of the program availability / offering</description>
    <label>Availability Start Date</label>
    <type>Date</type>
</CustomField>