src/core-crm/objects/hed__Program_Plan__c/fields/Blue_Card_Required__c.field-meta.xml
<CustomField>
    <fullName>Blue_Card_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Blue Card Required?</label>
    <type>Checkbox</type>
</CustomField>