src/core-crm/objects/hed__Program_Plan__c/fields/Bottom_Left_Signature_Text__c.field-meta.xml
<CustomField>
    <fullName>Bottom_Left_Signature_Text__c</fullName>
    <label>Bottom Left Signature Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>