src/core-crm/objects/hed__Program_Plan__c/fields/Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Category_Type__c</fullName>
    <description>Undergrad and postgrad category types</description>
    <label>Category Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>