src/core-crm/objects/hed__Program_Plan__c/fields/Certificate_Details__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate Details</label>
    <type>Checkbox</type>
</CustomField>