src/core-crm/objects/hed__Program_Plan__c/fields/Certificate_Type__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Type__c</fullName>
    <description>Indicates the type of certificate.</description>
    <label>Certificate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certificate of Achievement</fullName>
            </value>
            <value>
                <fullName>Certificate of Participation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>