src/core-crm/objects/hed__Program_Plan__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <inlineHelpText>This is a code that uniquely identifies the QUTeX product/course. Codes are in the format @@@###, where @ is an alphabetic character and # is a numeric character.</inlineHelpText>
    <label>Code</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>