src/core-crm/objects/hed__Program_Plan__c/fields/Completion_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Completion_Requirements__c</fullName>
    <label>Completion Requirements</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>