src/core-crm/objects/hed__Program_Plan__c/fields/Core_Concepts__c.field-meta.xml
<CustomField>
    <fullName>Core_Concepts__c</fullName>
    <label>Core Concepts</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>