src/core-crm/objects/hed__Program_Plan__c/fields/Core_Conceptsv2__c.field-meta.xml
<CustomField>
    <fullName>Core_Conceptsv2__c</fullName>
    <label>Core Concepts</label>
    <length>75000</length>
    <type>LongTextArea</type>
</CustomField>