src/core-crm/objects/hed__Program_Plan__c/fields/Courseloop_Full_URL__c.field-meta.xml
<CustomField>
    <fullName>Courseloop_Full_URL__c</fullName>
    <label>CourseLoop Full Proposal URL</label>
    <type>Url</type>
</CustomField>