src/core-crm/objects/hed__Program_Plan__c/fields/Courseloop_Initital_URL__c.field-meta.xml
<CustomField>
    <fullName>Courseloop_Initital_URL__c</fullName>
    <label>CourseLoop Initial Proposal URL</label>
    <type>Url</type>
</CustomField>