src/core-crm/objects/hed__Program_Plan__c/fields/Credential__c.field-meta.xml
<CustomField>
    <fullName>Credential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credential</label>
    <referenceTo>Credential__c</referenceTo>
    <relationshipLabel>Program Plans</relationshipLabel>
    <relationshipName>Program_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>