src/core-crm/objects/hed__Program_Plan__c/fields/CRICOS_Code__c.field-meta.xml
<CustomField>
    <fullName>CRICOS_Code__c</fullName>
    <description>The registration code for the course for international study</description>
    <label>CRICOS Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>