src/core-crm/objects/hed__Program_Plan__c/fields/Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Type__c</fullName>
    <label>Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Face To Face</fullName>
            </value>
            <value>
                <fullName>Virtual Classroom</fullName>
            </value>
            <value>
                <fullName>Blended</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>