src/core-crm/objects/hed__Program_Plan__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>