src/core-crm/objects/hed__Program_Plan__c/fields/Designated_Units__c.field-meta.xml
<CustomField>
    <fullName>Designated_Units__c</fullName>
    <label>Designated Units</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>