src/core-crm/objects/hed__Program_Plan__c/fields/Early_Exit_Options__c.field-meta.xml
<CustomField>
    <fullName>Early_Exit_Options__c</fullName>
    <label>Early Exit Options</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>