src/core-crm/objects/hed__Program_Plan__c/fields/Enrolment_Rules__c.field-meta.xml
<CustomField>
    <fullName>Enrolment_Rules__c</fullName>
    <inlineHelpText>(if required) eg. Prerequisites</inlineHelpText>
    <label>Enrolment Rules</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>