src/core-crm/objects/hed__Program_Plan__c/fields/Enrolment_Rulesv2__c.field-meta.xml
<CustomField>
    <fullName>Enrolment_Rulesv2__c</fullName>
    <label>Enrolment Rules</label>
    <length>75000</length>
    <type>LongTextArea</type>
</CustomField>