src/core-crm/objects/hed__Program_Plan__c/fields/Evolve_with_QUTeXv2__c.field-meta.xml
<CustomField>
    <fullName>Evolve_with_QUTeXv2__c</fullName>
    <label>Evolve with QUTeX</label>
    <length>75000</length>
    <type>LongTextArea</type>
</CustomField>