src/core-crm/objects/hed__Program_Plan__c/fields/External_Organisation_Details__c.field-meta.xml
<CustomField>
    <fullName>External_Organisation_Details__c</fullName>
    <label>External Organisation Details</label>
    <length>200</length>
    <type>Text</type>
</CustomField>