src/core-crm/objects/hed__Program_Plan__c/fields/Facilitated_By__c.field-meta.xml
<CustomField>
    <fullName>Facilitated_By__c</fullName>
    <label>Facilitated By</label>
    <length>128</length>
    <type>Text</type>
</CustomField>