src/core-crm/objects/hed__Program_Plan__c/fields/Field_of_Education__c.field-meta.xml
<CustomField>
    <fullName>Field_of_Education__c</fullName>
    <description>The broad field of education the program is classified as</description>
    <label>Field of Education</label>
    <length>80</length>
    <type>Text</type>
</CustomField>