src/core-crm/objects/hed__Program_Plan__c/fields/hed__Status__c.field-meta.xml
<CustomField>
    <fullName>hed__Status__c</fullName>
    <description>Select &quot;Current&quot; if this Program Plan has students enrolled in it, or is eligible for students to enroll. Otherwise, select &quot;Archived.&quot;</description>
    <inlineHelpText>Select &quot;Current&quot; if this Program Plan has students enrolled in it, or is eligible for students to enroll. Otherwise, select &quot;Archived.&quot;</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Current</fullName>
                <default>true</default>
                <label>Current</label>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Discontinued</fullName>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Phasing Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>