src/core-crm/objects/hed__Program_Plan__c/fields/Implementation_Year__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Year__c</fullName>
    <description>This field is used to store the Program Plan&apos;s implementation year.</description>
    <label>Implementation Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>