src/core-crm/objects/hed__Program_Plan__c/fields/Is_Custom_Award__c.field-meta.xml
<CustomField>
    <fullName>Is_Custom_Award__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Custom Award Course</label>
    <type>Checkbox</type>
</CustomField>