src/core-crm/objects/hed__Program_Plan__c/fields/IsComplete__c.field-meta.xml
<CustomField>
    <fullName>IsComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to determine if the user has completed the Program Plan modification.</description>
    <label>IsComplete</label>
    <type>Checkbox</type>
</CustomField>