src/core-crm/objects/hed__Program_Plan__c/fields/Left_Signature__c.field-meta.xml
<CustomField>
    <fullName>Left_Signature__c</fullName>
    <label>Left Signature</label>
    <length>256</length>
    <type>Html</type>
</CustomField>