src/core-crm/objects/hed__Program_Plan__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>hed__Facility__c</referenceTo>
    <relationshipLabel>Program Plans</relationshipLabel>
    <relationshipName>Program_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>