src/core-crm/objects/hed__Program_Plan__c/fields/Maximum_Participants__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Participants__c</fullName>
    <label>Maximum Participants</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>