src/core-crm/objects/hed__Program_Plan__c/fields/Middle_Right_Signature_Text__c.field-meta.xml
<CustomField>
    <fullName>Middle_Right_Signature_Text__c</fullName>
    <label>Middle Right Signature Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>