src/core-crm/objects/hed__Program_Plan__c/fields/More_Details__c.field-meta.xml
<CustomField>
    <fullName>More_Details__c</fullName>
    <description>Additional information about the Program Plan.</description>
    <label>More Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>