src/core-crm/objects/hed__Program_Plan__c/fields/More_Detailsv2__c.field-meta.xml
<CustomField>
    <fullName>More_Detailsv2__c</fullName>
    <label>More Details</label>
    <length>75000</length>
    <type>LongTextArea</type>
</CustomField>