src/core-crm/objects/hed__Program_Plan__c/fields/Other_Completion_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Other_Completion_Requirements__c</fullName>
    <label>Other Completion Requirements</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>