src/core-crm/objects/hed__Program_Plan__c/fields/Overview__c.field-meta.xml
<CustomField>
    <fullName>Overview__c</fullName>
    <label>Overview</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>