src/core-crm/objects/hed__Program_Plan__c/fields/Owning_Faculty__c.field-meta.xml
<CustomField>
    <fullName>Owning_Faculty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store the Program Plan&apos;s owning faculty.</description>
    <label>Owning Faculty</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Plans (Owning Faculty)</relationshipLabel>
    <relationshipName>Program_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>