src/core-crm/objects/hed__Program_Plan__c/fields/PP_Courseloop_Full__c.field-meta.xml
<CustomField>
    <fullName>PP_Courseloop_Full__c</fullName>
    <label>CourseLoop Full Proposal ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>