src/core-crm/objects/hed__Program_Plan__c/fields/PP_Design_Form_Status__c.field-meta.xml
<CustomField>
    <fullName>PP_Design_Form_Status__c</fullName>
    <label>Design Form Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Design Form Sent</fullName>
            </value>
            <value>
                <fullName>Design Form Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>