src/core-crm/objects/hed__Program_Plan__c/fields/PP_Is_curriculum_approved__c.field-meta.xml
<CustomField>
    <fullName>PP_Is_curriculum_approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Curriculum Approved?</label>
    <type>Checkbox</type>
</CustomField>