src/core-crm/objects/hed__Program_Plan__c/fields/Product_Request__c.field-meta.xml
<CustomField>
    <fullName>Product_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store the related Product Request record of the Program Plan.</description>
    <label>Product Request</label>
    <referenceTo>Product_Request__c</referenceTo>
    <relationshipLabel>Program Plans</relationshipLabel>
    <relationshipName>Program_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>