src/core-crm/objects/hed__Program_Plan__c/fields/Program_Description__c.field-meta.xml
<CustomField>
    <fullName>Program_Description__c</fullName>
    <label>Program Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>