src/core-crm/objects/hed__Program_Plan__c/fields/Program_Level__c.field-meta.xml
<CustomField>
    <fullName>Program_Level__c</fullName>
    <description>The program level according SAMS program levels</description>
    <label>Program Level</label>
    <length>80</length>
    <type>Text</type>
</CustomField>