src/core-crm/objects/hed__Program_Plan__c/fields/Program_Number__c.field-meta.xml
<CustomField>
    <fullName>Program_Number__c</fullName>
    <description>The course number that identifies the course in SAMS</description>
    <label>Program Number</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>