src/core-crm/objects/hed__Program_Plan__c/fields/Program_Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Plan_Code__c</fullName>
    <label>Program Plan Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>