src/core-crm/objects/hed__Program_Plan__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prescribed Program</fullName>
            </value>
            <value>
                <fullName>Flexible Program</fullName>
                <default>true</default>
                <label>Flexible Program</label>
            </value>
            <value>
                <fullName>Award Course</fullName>
            </value>
            <value>
                <fullName>Double Degree</fullName>
            </value>
            <value>
                <fullName>Open or Custom Program</fullName>
            </value>
            <value>
                <fullName>Custom Award Course (Not Base on existing)</fullName>
            </value>
            <value>
                <fullName>Custom Award Course (Based on existing)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>