src/core-crm/objects/hed__Program_Plan__c/fields/Right_Signature__c.field-meta.xml
<CustomField>
    <fullName>Right_Signature__c</fullName>
    <label>Right Signature</label>
    <length>256</length>
    <type>Html</type>
</CustomField>