src/core-crm/objects/hed__Program_Plan__c/fields/Study_Period__c.field-meta.xml
<CustomField>
    <fullName>Study_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated by integration from SAMS</description>
    <label>Study Period</label>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipLabel>Program Plans</relationshipLabel>
    <relationshipName>Program_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>