src/core-crm/objects/hed__Program_Plan__c/fields/Suggested_Delivery_Dates__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Delivery_Dates__c</fullName>
    <label>Suggested Delivery Dates</label>
    <length>100</length>
    <type>Text</type>
</CustomField>