src/core-crm/objects/hed__Program_Plan__c/fields/Top_Right_Signature_Text__c.field-meta.xml
<CustomField>
    <fullName>Top_Right_Signature_Text__c</fullName>
    <label>Top Right Signature Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>