src/core-crm/objects/hed__Program_Plan__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Doctorate by Research</fullName>
            </value>
            <value>
                <fullName>Doctorate by Coursework</fullName>
            </value>
            <value>
                <fullName>Masters by Research</fullName>
            </value>
            <value>
                <fullName>Masters by Coursework - Single</fullName>
            </value>
            <value>
                <fullName>Graduate Diploma - New Area</fullName>
            </value>
            <value>
                <fullName>Graduate Diploma - Exsiting Area</fullName>
            </value>
            <value>
                <fullName>Graduate Certificate</fullName>
            </value>
            <value>
                <fullName>Bachelor Pass Degree - Graduate Entry</fullName>
            </value>
            <value>
                <fullName>Bachelor Honours - Graduate Entry</fullName>
            </value>
            <value>
                <fullName>Bachelor Pass Single Degree</fullName>
            </value>
            <value>
                <fullName>Bachelor Pass Double Degree</fullName>
            </value>
            <value>
                <fullName>Masters by Coursework - Double Degree</fullName>
            </value>
            <value>
                <fullName>Certificate and University Certificate</fullName>
            </value>
            <value>
                <fullName>Diploma and University Diploma</fullName>
            </value>
            <value>
                <fullName>Non Award Course - Foundation</fullName>
            </value>
            <value>
                <fullName>Bachelor Honours Degree</fullName>
            </value>
            <value>
                <fullName>Bachelor Honours/Pass Double Degree</fullName>
            </value>
            <value>
                <fullName>Associate Degree</fullName>
            </value>
            <value>
                <fullName>Undergraduate Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>