src/core-crm/objects/hed__Program_Plan__c/fields/Volume_of_Learning_Hours__c.field-meta.xml
<CustomField>
    <fullName>Volume_of_Learning_Hours__c</fullName>
    <label>Volume of Learning (Hours)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>