src/core-crm/objects/hed__Program_Plan__c/fields/Who_Should_Participate__c.field-meta.xml
<CustomField>
    <fullName>Who_Should_Participate__c</fullName>
    <label>Who Should Participate?</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>