src/core-crm/objects/hed__Program_Plan__c/fields/Who_Should_Participatev2__c.field-meta.xml
<CustomField>
    <fullName>Who_Should_Participatev2__c</fullName>
    <inlineHelpText>Who should participate? By attending participants will gain new knowledge and skills</inlineHelpText>
    <label>Who Should Participate?</label>
    <length>75000</length>
    <type>LongTextArea</type>
</CustomField>