src/core-crm/objects/hed__Program_Plan__c/fields/Work_Experience_Required__c.field-meta.xml
<CustomField>
    <fullName>Work_Experience_Required__c</fullName>
    <label>Work Experience Required</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>