src/core-crm/objects/hed__Program_Plan__c/recordTypes/Program_Without_Pathway.recordType-meta.xml
<RecordType>
    <fullName>Program_Without_Pathway</fullName>
    <active>true</active>
    <description>This record type will be used to create a Program without Pathway that does not require CourseLoop approval. This can be a combination of a Module, a Short Course, or an Activity.</description>
    <label>Program Without Pathway</label>
</RecordType>