src/core-crm/objects/hed__Program_Plan__c/recordTypes/QUT_Program.recordType-meta.xml
<RecordType>
    <fullName>QUT_Program</fullName>
    <active>true</active>
    <label>QUT Program</label>
</RecordType>